infra/k8s/iris/overlays/stage/HTTPRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iris-pprof-httproute
  namespace: iris
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
      sectionName: https-stage-wildcard
  hostnames:
    - pprof.stage.codedang.com
